comp-transform/testsuite/bad/NoPragma/NoPragma.hs
module Main where 

piececategory A
